Add customers to VehicleRoutePlan